# velvet-backend

./: .env  .gitignore  Cargo.toml  README.md
src/: .env  auth.rs  db.rs  errors.rs  main.rs  models.rs
src/controllers/: product_controller.rs
src/routes/: admin.rs
