[package]
name = "ecom_admin"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
hyper = "0.14"
jsonwebtoken = "8.2"